--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1614,3 +1614,7 @@ i {
 .dropdown-item.calender-item:hover{
   color:#41b6a6;
 }
+
+#loginbody{
+  background-color: #efedee;
+}
